--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -13,7 +14,7 @@
 
       var display = function( data ){
         var output = document.querySelector('#output');
-        output.innerText = data;
+        output.innerHTML = data;
       }
     </script>
     <script src="script.js"></script>
